--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-node_modules
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+
+.DS_Store
+.idea
+node_modules/
+
+*~
+.vagrant/*
