--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     },
     "dependencies": {
         "underscore": "1.6.0",
-        "express": "^4.0.0",
+        "express": "4.6.0",
         "body-parser": "1.0.2",
-        "mongoose": "3.8.9"
+        "mongoose": "3.8.12"
 
     },
     "engines": {
@@ -22,6 +22,5 @@
             "name": "Sanel Deljkic",
             "email": "dsanel@gmail.com"
         }
-    ],
-    "license": "MIT"
+    ]
 }
