--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-    "name": "clinuip",
-    "version": "0.1.0",
-    "description": "Simple medical application.",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js"
-    },
-    "dependencies": {
-        "underscore": "1.6.0",
-        "express": "4.6.0",
-        "body-parser": "1.0.2",
-        "mongoose": "3.8.12"
-
-    },
-    "engines": {
-        "node": "0.10.x"
-    },
-    "author": "Sanel Deljkic <dsanel@gmail.com>",
-    "contributors": [
-        {
-            "name": "Sanel Deljkic",
-            "email": "dsanel@gmail.com"
-        }
-    ]
+  "name": "clinuip",
+  "version": "0.1.0",
+  "description": "Simple medical application.",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "body-parser": "1.0.2",
+    "express": "4.6.0",
+    "mongoose": "3.8.12",
+    "mongoose-paginate": "^3.1.3",
+    "underscore": "1.6.0",
+    "moment": "2.9.0"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "author": "Sanel Deljkic <dsanel@gmail.com>",
+  "contributors": [
+    {
+      "name": "Sanel Deljkic",
+      "email": "dsanel@gmail.com"
+    }
+  ]
 }
